[package]
name = "laogao-aescrypt"
version = "1.1.2"
edition = "2024"

[build-dependencies]
winres = "0.1"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }

[dependencies]
aescrypt-rs = "0.2.0-rc.8"
eframe = "0.27"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.14"
single-instance = "0.3"
obfstr = "0.4"
zeroize = "1"

[profile.release]
strip = "symbols"
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
